--- a/MNIST_softmax_mlp_cnn.ipynb
+++ b/MNIST_softmax_mlp_cnn.ipynb
@@ -8,10 +8,29 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Question 2**"
+    "**Question 2**\n",
+    "\n",
+    "Prove that H1 = H2.\n",
+    "\n",
+    "First, notice that (A+B)C and W both belong to R^(K \\* m).\n",
+    "\n",
+    "Let D^(K \\* K) = A^(K \\* K) + B^(K \\* K)\n",
+    "\n",
+    "Let E^(K \\* m) = D^(K \\* K) \\* C^(K \\* m)\n",
+    "\n",
+    "Therefore E = (A+B)C, and E and W both belong to R^(K \\* m). If E = W then H1 = H2.\n",
+    "\n",
+    "Next show that E = W by showing E is a subset of W and W is a subset of E. We will do this by picking an element in E and show it is in W, and pick an element in W and show it is in E.\n",
+    "\n",
+    "If n exists in E then n ^ (1 * m) and is a real number. Then for every n element such that n exists in E, there are K such elements in W.\n",
+    "\n",
+    "If n exists in W then n ^ (1 * m) and is a real number. Then for every n element such that n exists in W, there are K such elements in E.\n",
+    "\n",
+    "Therefore this shows that E = W, and thus H1 = H2."
    ]
   },
   {
@@ -36,7 +55,7 @@
     "3. If the program can no longer move diagonally in the image, start on a new diagonal, one row up from the previous diagonal, at column 0.\n",
     "4. If on a diagonal, the program reads a white pixel more than once on the same diagonal, then the image can be classified as class-2 image immediately.\n",
     "5. Else continue reading pixels in a top left to bottom right diagonal motion, with step size of 3 pixels.\n",
-    "6. If at the end of reading diagonally from left to right, arriving at pixel (0,99), white pixels were read only once on the same diagonal, then the image is class-1."
+    "6. If white pixels were read only once on the same diagonal at the end of reading pixels diagonally from left to right and arriving at pixel (0,99), then the image is class-1."
    ]
   },
   {
