--- a/MNIST_softmax_mlp_cnn.ipynb
+++ b/MNIST_softmax_mlp_cnn.ipynb
@@ -4,8 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Question 1**"
+    "**Question 1**\n",
+    "\n",
+    "L(x) is a scalar-valued function with variables x exists in R^(K), and A and B are both K x K matrices. For a given input vector x and a configuation of (A,B), give the steps of the back-propagation algorithm that computes the gradients dL/dA and dL/dB, evaluated at (x,A,B). Assume evaluated means in terms of (x,A,B)."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "attachments": {},
@@ -14,8 +23,13 @@
    "source": [
     "**Question 2**\n",
     "\n",
-    "Prove that H1 = H2.\n",
-    "\n",
+    "Prove that H1 = H2."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "First, notice that (A+B)C and W both belong to R^(K \\* m).\n",
     "\n",
     "Let D^(K \\* K) = A^(K \\* K) + B^(K \\* K)\n",
@@ -26,9 +40,9 @@
     "\n",
     "Next show that E = W by showing E is a subset of W and W is a subset of E. We will do this by picking an element in E and show it is in W, and pick an element in W and show it is in E.\n",
     "\n",
-    "If n exists in E then n ^ (1 * m) and is a real number. Then for every n element such that n exists in E, there are K such elements in W.\n",
+    "If n exists in E then n ^ (K * 1) and n is a real number. Then for every n element such that n exists in E, there are m such elements in W.\n",
     "\n",
-    "If n exists in W then n ^ (1 * m) and is a real number. Then for every n element such that n exists in W, there are K such elements in E.\n",
+    "If n exists in W then n ^ (K * 1) and n is a real number. Then for every n element such that n exists in W, there are m such elements in E.\n",
     "\n",
     "Therefore this shows that E = W, and thus H1 = H2."
    ]
